WP-8551 Removed the search box hover on responsive. fixed the alignment of the opened search. fixed the search opened on the actual search page for a responsive view.

--- a/sass/partials/design/_search-filters.sass
+++ b/sass/partials/design/_search-filters.sass
@@ -128,9 +128,10 @@
       &:hover
         +background((image_url("../images/icons/icon-search-white.svg") no-repeat center), $text-blue)
         background-size: 40%
-        +breakpoint($bp-for-phone-only)
-          background: transparent
-          width: 14%
+        +breakpoint($bp-for-phone-tablet-range)
+          +background((image_url("../images/icons/icon-search-red.svg") no-repeat center), $white)
+          background-size: 40%
+
     .no-js &, .no-svg &
       background: image_url("../images/icons/icon-search-active-42x42.png") no-repeat center 20px transparent
 // General search results page search
@@ -992,7 +993,7 @@ button.checkbox-clear-all
   font-size: 18px
   font-family: $font-sans
   position: absolute
-  top: 69px
+  top: 87px
   right: 5px
 
 // Search input overrides for Exec Ed
